tests/errors/range_zero_step.ki
discard range(0, 5, 0)
